@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-14T08:19:22Z",
-  "count_outdated" : 387,
-  "uniques_outdated" : 223,
-  "count" : 419,
+  "timestamp" : "2022-07-14T16:27:23Z",
+  "count_outdated" : 389,
+  "uniques_outdated" : 224,
+  "count" : 421,
   "uniques" : 242,
   "clones" : [
-    {
-      "timestamp": "2022-06-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-01T00:00:00Z",
       "count": 4,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
